@@ -1,1 +1,1 @@
-__version__ = '1.60'
+__version__ = '1.61'
